SFDC- 530 : Added new API to sent native mail.

--- a/src/classes/CadenceService.cls
+++ b/src/classes/CadenceService.cls
@@ -445,37 +445,39 @@ global  without sharing class CadenceService {
         return nativeEmail; 
     }
     
-    public static List<Id> SendNativeEmail(List<NativeEmailMessage> nativeEmailToSend ,Map<Id, Messaging.MassEmailMessage> emailsToSend ){
-        List<Id> failedActionIds = New List<Id>();
+    public static List<Messaging.MassEmailMessage> SendNativeEmail(List<NativeEmailMessage> nativeEmailToSend ){
         RingDNAApiCallouts ringDNAApiCallout = new RingDNAApiCallouts(true);
-        List<string> nativeEmailMessageJsonList = new List<String>();
-        
-        for(NativeEmailMessage nativeEmailMessage :nativeEmailToSend ){
-            Map<String, Object> responseMap = new Map<String, Object>();
-            if (System.isBatch()){
-                try{
-                    responseMap = ringDNAApiCallout.sendNativeEmail(nativeEmailMessage.MailTo, nativeEmailMessage.NameTo, nativeEmailMessage.Body, 
-                                                                    string.valueOf(nativeEmailMessage.ActionId),
-                                                                    nativeEmailMessage.Subject, string.valueOf(nativeEmailMessage.UserId));
-                }catch(exception ex){
-                    failedActionIds.add(nativeEmailMessage.ActionId);
+        List<NativeEmailMessage> nativeEmailMessageList = new List<NativeEmailMessage>();
+        List<Messaging.MassEmailMessage> sfdcEmailMessageList = New List<Messaging.MassEmailMessage>(); 
+        if (System.isBatch()){
+            List<NativeEmailRespose> nativeEmailResposeList = new List<NativeEmailRespose>();
+            try{
+            	nativeEmailResposeList = ringDNAApiCallout.sendNativeMassEmail(nativeEmailToSend);    
+            }catch(exception ex){
+                for(NativeEmailMessage nativeEmailMessage :nativeEmailToSend ){
+                    sfdcEmailMessageList.add(createEmailMessage(nativeEmailMessage.ParticipantId, nativeEmailMessage.TemplateId));
                 }
-                if (responseMap.isEmpty()  || (!responseMap.isEmpty() && (responseMap.get('success') == false || responseMap.get('success') == 'false')) ){
-                    failedActionIds.add(nativeEmailMessage.ActionId);
-                }else {
-                    emailsToSend.remove(nativeEmailMessage.ActionId);
-                }
-            }else{
-                emailsToSend.remove(nativeEmailMessage.ActionId);                
-                nativeEmailMessageJsonList.add(JSON.serialize(nativeEmailMessage));
             }
+            // Create map of actionId and nativeEmailMessage
+            Map<Id, NativeEmailMessage> actionIdNativeEmailMessageMap = new Map<Id, NativeEmailMessage>();
+            for(NativeEmailMessage nativeEmailMessage : nativeEmailMessageList ){
+                actionIdNativeEmailMessageMap.put(NativeEmailMessage.ActionId, NativeEmailMessage);
+            }
+            if (nativeEmailResposeList != null && nativeEmailResposeList.size() > 0 ) {
+                for (NativeEmailRespose nativeEmailRespose : nativeEmailResposeList){
+                    if (nativeEmailRespose.success == false){
+                        NativeEmailMessage nativeEmailMessage = actionIdNativeEmailMessageMap.get(nativeEmailRespose.actionId);
+                        sfdcEmailMessageList.add(createEmailMessage(nativeEmailMessage.ParticipantId, nativeEmailMessage.TemplateId));
+                    }
+                }
+            }
+        }else{
+            nativeEmailMessageList = nativeEmailToSend;
         }
-        
-        if(nativeEmailMessageJsonList != null && nativeEmailMessageJsonList.size() > 0){
-            sendNativeEmailTroughTrigger(nativeEmailMessageJsonList);
+        if(nativeEmailMessageList != null && nativeEmailMessageList.size() > 0){
+            sendNativeEmailTroughTrigger(JSON.serialize(nativeEmailMessageList));
         }
-        
-        return failedActionIds;
+        return sfdcEmailMessageList;
     }
     
     public static Task getEmailTask(Id sequenceActionId, String actionName, Id sObjectId, Id templateId) {
@@ -867,7 +869,7 @@ global  without sharing class CadenceService {
         Map<Id, SObject> objMap = new Map<Id, SObject>(objList); 
         List<Sequence_Action__c> partActToUpdate = new List<Sequence_Action__c>();
         List<Task> tasksToCreate = new List<Task>();
-        Map<Id, Messaging.MassEmailMessage> emailsToSend = new Map<Id, Messaging.MassEmailMessage>();
+        List<Messaging.MassEmailMessage> emailsToSend = new List<Messaging.MassEmailMessage>();
         List<NativeEmailMessage> nativeEmailToSend = new List<NativeEmailMessage>();
         List<Id> emailTemplateIdList = new List<Id>();
         //Return if no unperformed participant actions 
@@ -889,7 +891,6 @@ global  without sharing class CadenceService {
                     //Processing email type of participant action
                     if(partAct.CadenceAction_Id__r.Action_Id__r.Type__c != null && partAct.CadenceAction_Id__r.Action_Id__r.Type__c.equals(CadenceConstants.ACTION_TYPE_EMAIL)) {
                         if(objMap.containsKey(objId) && objMap.get(objId).get('Email')!=null) {
-                            emailsToSend.put(partAct.Id, createEmailMessage(objId, partAct.CadenceAction_Id__r.Action_Id__r.Template_Id__c));
                             String nativeMailTo = String.valueOf(objMap.get(objId).get('Email'));
                             String nativeNameTo = String.valueOf(objMap.get(objId).get('Name'));
                             String participantOwnerId = String.valueOf(objMap.get(objId).get('OwnerId'));
@@ -897,10 +898,9 @@ global  without sharing class CadenceService {
                             if(partAct.CadenceAction_Id__r.Action_Id__r.Email_Type__c != null && partAct.CadenceAction_Id__r.Action_Id__r.Email_Type__c.equals(CadenceConstants.NATIVE_EMAIL_TYPE)){
                                 nativeEmailToSend.add(createNativeEmailMessage(nativeMailTo, partAct.CadenceAction_Id__r.Action_Id__r.Template_Id__c, 
                                                                                objId, partAct.Id, nativeNameTo, userId));
-                                //emailTemplateIdList.add(partAct.CadenceAction_Id__r.Action_Id__r.Template_Id__c);
-                            }//else{
-                                //emailTemplateIdList.add(partAct.CadenceAction_Id__r.Action_Id__r.Template_Id__c);
-                            //}
+                            }else{
+                                emailsToSend.add(createEmailMessage(objId, partAct.CadenceAction_Id__r.Action_Id__r.Template_Id__c));
+                            }
                             tasksToCreate.add(getEmailTask(partAct.Id, partAct.Name, objId, partAct.CadenceAction_Id__r.Action_Id__r.Template_Id__c));
                             performed = true;
                         } 
@@ -948,25 +948,16 @@ global  without sharing class CadenceService {
                         performedPartActions.put(objId, new List<Sequence_Action__c>{partAct});
                     }
                 }
-                
            } 
         }
-	    
         if(!nativeEmailToSend.isEmpty()) {
-            //List<NativeEmailMessage> updatedNativeEmailToSend = updateNativeEmailMessage(nativeEmailToSend, emailTemplateIdList);
-            List<Id> failedActionIds = SendNativeEmail(nativeEmailToSend, emailsToSend);
-            if (!failedActionIds.isEmpty()){
-                List<Messaging.MassEmailMessage> sfdcMailToSent = New List<Messaging.MassEmailMessage>();
-                for(Id actionId : failedActionIds){
-                    sfdcMailToSent.add(emailsToSend.get(actionId));
-                    emailsToSend.remove(actionId);
-                }
-                Messaging.SendEmailResult[] results = Messaging.sendEmail(sfdcMailToSent, false);
+            List<Messaging.MassEmailMessage> failedNativeEmailList =  SendNativeEmail(nativeEmailToSend);
+            if (!failedNativeEmailList.isEmpty()){
+                emailsToSend.addAll(failedNativeEmailList);
             }
         }
-	    
-	if(!emailsToSend.isEmpty()) {
-            Messaging.SendEmailResult[] results = Messaging.sendEmail(emailsToSend.values(), false);
+        if(!emailsToSend.isEmpty()) {
+            Messaging.SendEmailResult[] results = Messaging.sendEmail(emailsToSend, false);
         }
 	    
         if(!tasksToCreate.isEmpty()) {
@@ -1586,25 +1577,33 @@ global  without sharing class CadenceService {
     }
     
     @future(callout=true)
-    public static void sendNativeEmailTroughTrigger(List<String> nativeEmailMessageJsonList)
+    public static void sendNativeEmailTroughTrigger(String serializeNativeEmailMessageList)
     {   
         RingDNAApiCallouts ringDNAApiCallout = new RingDNAApiCallouts(true);
         Map<String, Object> responseMap = new Map<String, Object>();
         List<Messaging.MassEmailMessage> sfdcEmailMessageList = New List<Messaging.MassEmailMessage>();        
-        
-        for(String nativeEmailMessageJson :nativeEmailMessageJsonList ){
-            NativeEmailMessage nativeEmailMessage = (NativeEmailMessage) JSON.deserialize(nativeEmailMessageJson, NativeEmailMessage.class);
-            
-            try{
-                responseMap = ringDNAApiCallout.sendNativeEmail(nativeEmailMessage.MailTo, nativeEmailMessage.NameTo, nativeEmailMessage.Body, string.valueOf(nativeEmailMessage.ActionId),  nativeEmailMessage.Subject, nativeEmailMessage.UserId);
-                if (responseMap.isEmpty()  || (!responseMap.isEmpty() && (responseMap.get('success') == false || responseMap.get('success') == 'false')) ){
+        List<NativeEmailMessage> nativeEmailMessageList = (List<NativeEmailMessage>) JSON.deserialize(serializeNativeEmailMessageList, List<NativeEmailMessage>.class);
+        List<NativeEmailRespose> nativeEmailResposeList = new List<NativeEmailRespose>();
+        try{
+            nativeEmailResposeList = ringDNAApiCallout.sendNativeMassEmail(nativeEmailMessageList);    
+        }catch(exception ex){
+            for(NativeEmailMessage nativeEmailMessage : nativeEmailMessageList ){
+                sfdcEmailMessageList.add(createEmailMessage(nativeEmailMessage.ParticipantId, nativeEmailMessage.TemplateId));
+            }
+        }
+        // Create map of actionId and nativeEmailMessage
+        Map<Id, NativeEmailMessage> actionIdNativeEmailMessageMap = new Map<Id, NativeEmailMessage>();
+        for(NativeEmailMessage nativeEmailMessage : nativeEmailMessageList ){
+            actionIdNativeEmailMessageMap.put(NativeEmailMessage.ActionId, NativeEmailMessage);
+        }
+        if (nativeEmailResposeList != null && nativeEmailResposeList.size() > 0 ) {
+            for (NativeEmailRespose nativeEmailRespose : nativeEmailResposeList){
+                if (nativeEmailRespose.success == false){
+                    NativeEmailMessage nativeEmailMessage = actionIdNativeEmailMessageMap.get(nativeEmailRespose.actionId);
                     sfdcEmailMessageList.add(createEmailMessage(nativeEmailMessage.ParticipantId, nativeEmailMessage.TemplateId));                    
                 }
-            }catch(exception ex){                
-                sfdcEmailMessageList.add(createEmailMessage(nativeEmailMessage.ParticipantId, nativeEmailMessage.TemplateId));
-            }            
+            }
         }
-        
         if(sfdcEmailMessageList.isEmpty() == false) {
             Messaging.SendEmailResult[] results = Messaging.sendEmail(sfdcEmailMessageList, false);
         }                                        
